--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,3 @@
 .container {
-    height: 100%;
+    height: calc(100vh - 42px);
 }
